<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/scrollView" >

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="space.eya.mutiful.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="4dp"
        android:text="@string/labelTriggerText"
        android:id="@+id/getMute_triggerText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/muteTrigger"
        android:textAlignment="center"
        android:layout_below="@+id/getMute_triggerText"
        android:drawableBottom="@drawable/trigger_input"
        android:layout_alignParentLeft="true"
        android:inputType="textShortMessage|textNoSuggestions"
        style="@style/EditTextAppTheme"
        android:layout_alignParentStart="true"

        android:nextFocusUp="@id/muteTrigger"
        android:nextFocusLeft="@id/muteTrigger"
        />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_checkbox"

        android:text="@string/checkbox_mute_ring"
        android:id="@+id/mute_ring"

        android:onClick="onCheckboxClick"

        android:layout_below="@+id/muteTrigger"
        android:layout_marginTop="14dp"
        />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_checkbox"

        android:text="@string/checkbox_mute_music"
        android:id="@+id/mute_music"

        android:onClick="onCheckboxClick"

        android:layout_below="@+id/mute_ring"
        android:layout_marginTop="12dp"
        />
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_checkbox"

        android:text="@string/checkbox_mute_alarm"
        android:id="@+id/mute_alarm"

        android:onClick="onCheckboxClick"

        android:layout_below="@+id/mute_music"
        android:layout_marginTop="12dp"
        />
    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/yellow_checkbox"

        android:text="@string/checkbox_mute_other"
        android:id="@+id/mute_other"

        android:onClick="onCheckboxClick"

        android:layout_below="@+id/mute_alarm"
        android:layout_marginTop="12dp"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:onClick="testMuteAction"

        android:background="@drawable/yellow_button"
        style="@style/StyleButton"
        android:text="@string/alert_test_settings"
        android:id="@+id/button"

        android:layout_below="@+id/mute_other"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>

</ScrollView>