<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="space.eya.mutiful.HelpActivity$PlaceholderFragment">

    <view
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        class="space.eya.mutiful.FractionalSizeView"
        android:id="@+id/strutH"
        />
    <View
        android:id="@+id/strutV"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:background="#00000000" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help_alert_title"
        android:id="@+id/textView2"
        style="@style/HelpTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help_screen_03"
        android:id="@+id/imageView"
        android:layout_alignRight="@id/strutH"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:layout_width="@dimen/help_text_block_width"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_alert_window"
        android:id="@+id/textView3"
        style="@style/HelpText"
        android:layout_above="@id/strutV"
        android:layout_toRightOf="@id/strutH"
        android:layout_marginBottom="@dimen/help_text_3_1_margin"
        />

    <TextView
        android:layout_width="@dimen/help_text_block_width"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/help_alert_dismiss"
        android:id="@+id/textView4"
        style="@style/HelpText"
        android:layout_below="@id/strutV"
        android:layout_toRightOf="@id/strutH"
        android:layout_marginTop="@dimen/help_text_3_2_margin"
        />



</RelativeLayout>
